--- a/web_flask/templates/5-number.html
+++ b/web_flask/templates/5-number.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <HTML lang="en">
-    <HEAD>
-        <TITLE>HBNB</TITLE>
-    </HEAD>
-    <BODY>
+    <head>
+        <title>HBNB</title>
+    </head>
+    <body>
         <H1>Number: {{ n }}</H1>
 
-    </BODY>
+    </body>
 </HTML>
