--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -6,8 +6,8 @@
     <BODY>
         <H1>States</H1>
         <UL>
-            {% for state in list_states %}
-            <LI>{{ state.id|e: <B>state.name|e</B>  }}</LI>
+            {% for state in states_list %}
+            <LI>{{state.id|e}}:</LI>
             {% endfor %}
         </UL>
     </BODY>
