--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -7,7 +7,7 @@
         <H1>States</H1>
         <UL>
             {% for state in states_list %}
-            <LI>{{state.id|e}}:</LI>
+            <LI>{{state.id|e}}: <B>{{state.name|e}}</B></LI>
             {% endfor %}
         </UL>
     </BODY>
