fixing task 9 - fixing template file

--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -10,7 +10,9 @@
             <LI>{{state.id|e}}: <B>{{state.name|e}}</B></LI>
             <UL>
                 {% for city in cities_list|sort(attribute='name') %}
-                <LI>{{city.id|e}}: <B>{{city.name|e}}</B></LI>
+                    {% if city.state_id == state.id %}
+                    <LI>{{city.id|e}}: <B>{{city.name|e}}</B></LI>
+                    {% endif %}
                 {% endfor %}
             </UL>
             {% endfor %}
