--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -12,7 +12,7 @@
             {% endfor %}
             </UL>
         {% elif state_to_html and cities_list%}
-            <H1>State: </H1>
+            <H1>State: {{ state_to_html.name}}</H1>
             <H3>Cities:</H3>
             <UL>
                 {% for city in cities_list|sort(attribute='name') %}
