--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -11,7 +11,7 @@
             <LI>{{state.id|e}}: <B>{{state.name|e}}</B></LI>
             {% endfor %}
             </UL>
-        {% elif not states_list %}
+        {% elif not states_list and state_to_html %}
             <H1>State: {{ state_to_html.name}}</H1>
             <H3>Cities:</H3>
             <UL>
