--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -19,7 +19,7 @@
                     <LI>{{city.id|e}}: <B>{{city.name|e}}</B></LI>
                 {% endfor %}
             </UL>
-        {% elif not state_to_html and not cities_list and not states_list %}
+        {% else %}
             <H1>Not found!</H1>
         {% endif %}
     </BODY>
