--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -4,7 +4,7 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-        {% if not state_to_html %}
+        {% if states_list %}
         <H1>States</H1>
             <UL>
             {% for state in states_list|sort(attribute='name') %}
@@ -12,7 +12,7 @@
             {% endfor %}
             </UL>
         {% else %}
-            {% if states_list and state_to_html %}
+            {% if cities_list and state_to_html %}
                 <H1>State: {{ state_to_html.name}}</H1>
                 <H3>Cities:</H3>
                 <UL>
