--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -4,7 +4,7 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-        {% if states_list %}
+        {% if not cities_list and states_list %}
         <H1>States</H1>
             <UL>
             {% for state in states_list|sort(attribute='name') %}
