fixing task 10 - fixing templates

--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -12,7 +12,7 @@
             {% endfor %}
             </UL>
         {% else %}
-            {% if cities_list and state_to_html %}
+            {% if state_to_html %}
                 <H1>State: {{ state_to_html.name}}</H1>
                 <H3>Cities:</H3>
                 <UL>
