--- a/web_flask/templates/10-hbnb_filters.html
+++ b/web_flask/templates/10-hbnb_filters.html
@@ -3,12 +3,12 @@
 	<head>
 		<title>AirBnB clone</title>
 
-		<link rel="shortcut icon" href="images/icon.ico" >
+		<link rel="shortcut icon" href="/web_flask/images/icon.ico" >
 
-		<link rel="stylesheet" href="styles/4-common.css"/>
-		<link rel="stylesheet" href="styles/3-header.css"/>
-		<link rel="stylesheet" href="styles/3-footer.css"/>
-		<link rel="stylesheet" href="styles/6-filters.css"/>
+		<link rel="stylesheet" href="/web_flask/static/styles/3-footer.css"/>
+		<link rel="stylesheet" href="/web_flask/static/styles/3-header.css"/>
+		<link rel="stylesheet" href="/web_flask/static/styles/4-common.css"/>
+		<link rel="stylesheet" href="/web_flask/static/styles/6-filters.css"/>
 	</head>
     <body>
 		<header>
@@ -38,7 +38,7 @@
 					<h4>Internet, Kitchen...</h4>
 					<ul class="popover">
                         {% for amenity in amenities_list|sort(attribute='name') %}
-						<li><h4>{{ amenitiy.name }}&nbsp;</h4></li>
+						<li><h4>{{ amenity.name }}&nbsp;</h4></li>
                         {% endfor %}
 					</ul>
 				</div>
