--- a/web_flask/static/styles/3-header.css
+++ b/web_flask/static/styles/3-header.css
@@ -10,7 +10,7 @@ header {
 	height: 100%;
 	width: 142px;
 
-	background-image: url("../images/logo.png");
+	background-image: url("web_flask/images/logo.png");
 	background-repeat: no-repeat;
 	background-position: center;
 
